--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   sqflite: ^1.3.2+4
   multi_image_picker: ^ 4.7.12
   table_calendar: ^2.3.3
+  fl_chart: ^0.12.3
 
 dev_dependencies:
   flutter_test:
