--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   multi_image_picker: ^ 4.7.12
   table_calendar: ^2.3.3
   fl_chart: ^0.12.3
+  flutter_local_notifications: ^4.0.0
 
 dev_dependencies:
   flutter_test:
